# sycl-intel-spec

./: .gitignore  .gitmodules  README.md  build.sh  process.sh  run.sh
bandwidth/: README.md  process.sh  run.sh
bandwidth/postprocess/: plot.py
lookup_sub_devices/: CMakeLists.txt
lookup_sub_devices/src/: sub_devices.cpp
postprocess/: parse.py  plot.py
sub_groups/: README.md  process.sh  run.sh
sub_groups/postprocess/: merge.py  parse.py  plot.py  plot_gpu_instructions.py  plot_simd_utilization.py  plot_speedup.py  plot_xve_occupancy.py  plot_xve_utilization.py  requirements.txt  resume.py  speedup_plot.py
